# cache-conda-envs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  environment.yml  nomp.pc.in  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: CMakeLists.txt  Doxyfile.in  build.rst  conf.py  developer-docs.rst  index.rst  internal-api.rst  nomp-usage.rst  user-api.rst
python/: loopy_api.py
src/: auxiliary.c  cuda.c  loopy.c  nomp-impl.h  nomp.c  nomp.h  opencl.c
tests/: nomp-api-000.c  nomp-api-100-impl.h  nomp-api-100.c  nomp-api-110-impl.h  nomp-api-110.c  nomp-api-200-impl.h  nomp-api-200.c  nomp-api-200.py  nomp-api-210-impl.h  nomp-api-210.c  nomp-api-220-impl.h  nomp-api-220.c  nomp-api-221-impl.h  nomp-api-221.c  nomp-api-222-impl.h  nomp-api-222.c  nomp-api-230-impl.h  nomp-api-230.c  nomp-api-231-impl.h  nomp-api-231.c  nomp-api-232-impl.h  nomp-api-232.c  nomp-api-233-impl.h  nomp-api-233.c  nomp-api-240-impl.h  nomp-api-240.c  nomp-generate-tests.h  nomp-test.h  run-tests.sh  test_example.py
